--- a/form.html
+++ b/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,7 +30,7 @@
 
   <section class="section-form">
     <div class="wrapper">
-      <h3 class="icon-f">Бизнес Молодость</h3>
+      <h3 class="icon-f">Напишите нам</h3>
       <form class="" method="post" id="feedback-valid-1" action="sendmail.php">
       <textarea name="texta" placeholder="Не забудьте указать свое имя и контактный телефон"></textarea>
         <input class="btn" type="submit" value="Отправить">
