--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,7 +43,7 @@
 			<div class="title-small">За 2,5 года мы запустили 57 целевых страниц</div>
 			<div class="project-wrapp">
 				<div class="project-item">
-					<a href="#"><img src="img/pr-1.jpg" alt="" width="222" height="270"></a>
+					<a href="project1.html"><img src="img/pr-1.jpg" alt="" width="222" height="270"></a>
 					<div class="head">Сайт и рекламные материалы</div>
 					<h4 class="ico-pr-1">Бизнес Молодость</h4>
 					<ul class="list">
@@ -187,13 +187,13 @@
 	</footer>
 
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<!-- 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="fancybox/jquery.fancybox.pack.js"></script>
 	<script src="js/check_ajax.js"></script>       
 	<script src="js/jquery.maskedinput.js"></script>   
 	<script src="js/jquery.form.js"></script>       
 	<script src="js/jquery.validate.js"></script>     
-	<script src="js/main.js"></script>
+	<script src="js/main.js"></script> -->
 
 <!-- <script src="http://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
 	<script src="js/yandex.js"></script>    YANDEX MAP-->
