--- a/project1.html
+++ b/project1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -113,13 +113,13 @@
   </footer>
 
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<!--   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="fancybox/jquery.fancybox.pack.js"></script>
   <script src="js/check_ajax.js"></script>       
   <script src="js/jquery.maskedinput.js"></script>   
   <script src="js/jquery.form.js"></script>       
   <script src="js/jquery.validate.js"></script>     
-  <script src="js/main.js"></script>
+  <script src="js/main.js"></script> -->
 
 <!-- <script src="http://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
   <script src="js/yandex.js"></script>    YANDEX MAP-->
