--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					</ul>
 				</div>
 				<div class="project-item">
-					<a href="#"><img src="img/pr-2.jpg" alt="" width="222" height="270"></a>
+					<a href="project2.html"><img src="img/pr-2.jpg" alt="" width="222" height="270"></a>
 					<div class="head">Сайт и рекламные материалы</div>
 					<h4 class="ico-pr-2">Офигенный Маркетинг</h4>
 					<ul class="list">
@@ -61,7 +61,7 @@
 					</ul>
 				</div>
 				<div class="project-item">
-					<a href="#"><img src="img/pr-3.jpg" alt="" width="222" height="270"></a>
+					<a href="project3.html"><img src="img/pr-3.jpg" alt="" width="222" height="270"></a>
 					<div class="head">Сайт и рекламные материалы</div>
 					<h4 class="ico-pr-2">Форум «Synergy Insight»</h4>
 					<ul class="list">
