--- a/project1.html
+++ b/project1.html
@@ -33,9 +33,9 @@
       <div class="left-l">
         <h3 class="icon-1">Бизнес Молодость</h3>
         <p>
-          «Найди бизнес для себя» — 3 занятия в формате видео-лекций с 16 практическими занятиями, которые дадут ответ на вопрос “Чем мне лучше заниматься?” по модели Бизнес Молодости.
+          «Найди бизнес для себя» — 3 занятия в формате видео-лекций <br>с 16 практическими занятиями, которые дадут ответ на вопрос “Чем мне лучше заниматься?” по модели Бизнес Молодости.
           <b>Задача — разработать посадочную страницу и материалы
-            для рекламных кампаний в социальных и поисковых сетях
+            <br>для рекламных кампаний в социальных и поисковых сетях
           </b>
         </p>
       </div>
