--- a/project2.html
+++ b/project2.html
@@ -33,7 +33,7 @@
       <div class="left-l">
         <h3 class="icon-2">Офигенный Маркетинг</h3>
         <p>
-          «Офигенный Маркетинг» — 2 месячный комплексный онлайн-практикум по лидогенерации, конверсии, бизнес-моделированию и созданию call to action из 8 занятий с домашними заданиями.
+          «Офигенный Маркетинг» — 2 месячный комплексный онлайн-практикум по лидогенерации, конверсии, бизнес-моделированию и созданию call to action <br>из 8 занятий с домашними заданиями.
 
           <b>Задача — создать промостраницу и материалы для рекламной кампании в Фейсбуке</b>
         </b>
@@ -70,10 +70,10 @@
     <div class="left-l">
       <div class="person-wrapp">
       <img src="img/comm-2.png" alt="" width="50" height="50">
-        <span>Руслан</span>
+        <span>Руслан Татунашвили</span>
       </div>
-      <p class="size-1">«Офигенному Маркетингу» — офигенный сайт. Я работаю в сфере
-        интернет-бизнеса и хорошо понимаю, что мне нужно в результате. <br>
+      <p class="size-1">«Офигенному Маркетингу» — офигенный сайт. Я работаю <br>в сфере
+        интернет-бизнеса и хорошо понимаю, что мне нужно<br> в результате.
 
         Проект сдали и запустили вовремя, заявки приходят, цена клиента
         меньше, чем в изначально заложенной смете. Что еще нужно?
