--- a/project3.html
+++ b/project3.html
@@ -31,15 +31,15 @@
 	<section class="section-goals">
 		<div class="wrapper">
 			<div class="left-l">
-				<h3 class="icon-3">Форум «Synergy Insight»</h3>
+				<h3 class="icon-2">Форум «Synergy Insight»</h3>
 				<p>
-					«Synergy Insight Forum» — 3 дневное мероприятие в Москве с 16 выступлениями бизнесменов из стран СНГ, России, Европы и Америки. Проводится ежегодно.
+					«Synergy Insight Forum» — 3 дневное мероприятие в Москве <br>с 16 выступлениями бизнесменов из стран СНГ, России, Европы <br>и Америки. Проводится ежегодно.
 
 					<b>Задача — разработать посадочную страницу, мобильную версию и графику для рекламных кампаний</b>
 				</b>
 			</p>
 		</div>
-		<a href="#" class="open-link sm-3">В браузере</a>
+		<a href="#" class="open-link sm-2">В браузере</a>
 	</div>
 </section>
 
@@ -63,16 +63,16 @@
 	</div>
 </section>
 
-<img src="img/project3.jpg" alt="" class="projects" width="1360" height="7706">
+<img src="img/project3.jpg" alt="" class="projects" width="1180" height="7518">
 
 <section class="section-feedback">
 	<div class="wrapper">
 		<div class="left-l">
 			<div class="person-wrapp">
 				<img src="img/comm-3.png" alt="" width="50" height="50">
-				<span>Игор</span>
+				<span>Игорь Манн</span>
 			</div>
-			<p class="size-1">За 4 месяца рекламной кампании собрали предзаказов на треть зала. И это за год до события!</p>
+			<p class="size-1">За 4 месяца рекламной кампании собрали предзаказов <br>на треть зала. И это за год до события!</p>
 		</div>
 		<div class="date">
 			Cтарт: 4 декабря 2015 г. <br>
