--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<div class="border-a deadline">До 23 сентября</div>
 				<div class="title-bold">Бесплатно<br>настроим</div>
 				<div class="title-small">Контекстную рекламную кампанию при заказе посадочной страницы</div>
-				<a href="form.html" class="button btn-1">Обсудить проект</a>
+				<a href="form.html" class="button btn-1"><span>Обсудить проект</span></a>
 			</div>
 		</div>
 	</section>
@@ -155,7 +155,7 @@
 			<div class="faq-r">
 				<img src="img/faq.png" alt="" width="220" height="133">
 				<div class="nrm clearfix">У вас остались<br>вопросы?</div>
-				<a href="form.html" class="button">Задать свой вопрос</a>
+				<a href="form.html" class="button"><span>Спросить</span></a>
 			</div>
 		</div>
 	</div>
@@ -166,7 +166,7 @@
 				<div class="border-a deadline">До 23 сентября</div>
 				<div class="title-bold">Бесплатно<br>настроим</div>
 				<div class="title-small">Контекстную рекламную кампанию при заказе посадочной страницы</div>
-				<a href="form.html" class="button btn-1">Обсудить проект</a>
+				<a href="form.html" class="button btn-1"><span>Обсудить проект</span></a>
 			</div>
 		</div>
 	</section>
