--- a/thx1.html
+++ b/thx1.html
@@ -31,7 +31,7 @@
     <div class="wrapper">
       <h3 class="icon-thx">Спасибо</h3>
       <div class="size-1">Мы свяжемся с вами в течении 10 часов</div>
-      <a href="index.html" class="button">На главную</a>
+      <a href="index.html" class="button btn-h"><span>На главную</span></a>
     </div>
   </section>
 
