--- a/form.html
+++ b/form.html
@@ -33,7 +33,7 @@
       <h3 class="icon-f">Напишите нам</h3>
       <form class="" method="post" id="feedback-valid-1" action="sendmail.php">
       <textarea name="texta" placeholder="Не забудьте указать свое имя и контактный телефон"></textarea>
-        <input class="btn" type="submit" value="Отправить">
+        <button class="btn" type="submit"><span>Отправить</span></button>
       </form>
     </div>
   </section>
