--- a/project1.html
+++ b/project1.html
@@ -90,7 +90,7 @@
         <div class="border-a deadline">До 23 сентября</div>
         <div class="title-bold">Бесплатно<br>настроим</div>
         <div class="title-small">Контекстную рекламную кампанию при заказе посадочной страницы</div>
-        <a href="form.html" class="button btn-1">Обсудить проект</a>
+        <a href="form.html" class="button btn-1"><span>Обсудить проект</span></a>
       </div>
     </div>
   </section>
